src/parser.output
Terminals unused in grammar

    '|'


Grammar

    0 $accept: goal $end

    1 goal: testScript

    2 testScript: VarList RoutineList TestList

    3 VarList: %empty
    4        | VarList VariableAssign

    5 RoutineList: RoutineList Routine
    6            | %empty

    7 Routine: routine stringLiteral '{' StatementList '}'

    8 TestList: TestList Test
    9         | %empty

   10 Test: test stringLiteral '{' StatementList '}'

   11 StatementList: %empty
   12              | StatementList Statement

   13 ExpectCall: expect Exp
   14           | assert Exp

   15 PromptCall: prompt Exp

   16 PrintCall: perrint Exp
   17          | perrintln Exp

   18 Index: '[' Exp ']'

   19 CanManip: identifier Index
   20         | identifier '.' length

   21 Exp: CanManip
   22    | Exp add Exp
   23    | Exp mult Exp
   24    | Exp NE Exp
   25    | Exp EQ Exp
   26    | Exp comparison Exp
   27    | Exp andToken Exp
   28    | Exp orToken Exp
   29    | identifier
   30    | stringLiteral
   31    | integerLiteral
   32    | hexLiteral
   33    | can_msg
   34    | add Exp
   35    | '(' Exp ')'

   36 VariableAssign: identifier '=' Exp ';'
   37               | identifier Index '=' Exp ';'
   38               | identifier '.' length '=' Exp ';'

   39 SendMsgCall: send_msg hexLiteral Exp
   40            | send_msg identifier Exp

   41 ReadMsgCall: read_msg hexLiteral
   42            | read_msg identifier

   43 ReadPinCall: read_pin ain integerLiteral
   44            | read_pin ain identifier
   45            | read_pin din integerLiteral
   46            | read_pin din identifier

   47 SetAnalogTail: integerLiteral identifier
   48              | identifier identifier
   49              | identifier integerLiteral
   50              | integerLiteral integerLiteral

   51 SetPinCall: set_pin aout SetAnalogTail
   52           | set_pin dout integerLiteral dstate
   53           | set_pin dout identifier dstate

   54 DelayCall: delay Exp

   55 LoopCall: loop Exp '{' StatementList '}'
   56         | loop forever '{' StatementList '}'

   57 Statement: error ';'
   58          | If '(' Exp ')' '{' StatementList '}'
   59          | If '(' Exp ')' '{' StatementList '}' Else '{' StatementList '}'
   60          | VariableAssign
   61          | call stringLiteral ';'
   62          | LoopCall
   63          | SetPinCall ';'
   64          | ReadPinCall ';'
   65          | ExpectCall ';'
   66          | PrintCall ';'
   67          | SendMsgCall ';'
   68          | ReadMsgCall ';'
   69          | DelayCall ';'
   70          | PromptCall ';'
   71          | serialTx Exp ';'
   72          | serialRx ';'
   73          | exit_tok ';'
   74          | exit_tok stringLiteral ';'
   75          | Exp plusplus ';'
   76          | Exp minusminus ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' <node> (40) 35 58 59
    ')' <node> (41) 35 58 59
    '.' (46) 20 38
    ';' <node> (59) 36 37 38 57 61 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    '=' (61) 36 37 38
    '[' (91) 18
    ']' (93) 18
    '{' <node> (123) 7 10 55 56 58 59
    '|' <node> (124)
    '}' <node> (125) 7 10 55 56 58 59
    error (256) 57
    routine <node> (258) 7
    test <node> (259) 10
    loop <node> (260) 55 56
    delay <node> (261) 54
    read_pin <node> (262) 43 44 45 46
    set_pin <node> (263) 51 52 53
    perrint <node> (264) 16
    perrintln <node> (265) 17
    expect <node> (266) 13
    exit_tok <node> (267) 73 74
    prompt <node> (268) 15
    read_msg <node> (269) 41 42
    send_msg <node> (270) 39 40
    call <node> (271) 61
    forever <node> (272) 56
    dout <node> (273) 52 53
    din <node> (274) 45 46
    aout <node> (275) 51
    ain <node> (276) 43 44
    serialRx <node> (277) 72
    serialTx <node> (278) 71
    assert <node> (279) 14
    If <node> (280) 58 59
    Else <node> (281) 59
    length <node> (282) 20 38
    stringLiteral <str> (283) 7 10 30 61 74
    identifier <str> (284) 19 20 29 36 37 38 40 42 44 46 47 48 49 53
    can_msg <str> (285) 33
    add <str> (286) 22 34
    mult <str> (287) 23
    comparison <str> (288) 26
    andToken <str> (289) 27
    orToken <str> (290) 28
    NE <str> (291) 24
    EQ <str> (292) 25
    integerLiteral <i> (293) 31 43 45 47 49 50 52
    hexLiteral <i> (294) 32 39 41
    dstate <i> (295) 52 53
    plusplus (296) 75
    minusminus (297) 76


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    goal (54)
        on left: 1
        on right: 0
    testScript <node> (55)
        on left: 2
        on right: 1
    VarList <node> (56)
        on left: 3 4
        on right: 2 4
    RoutineList <node> (57)
        on left: 5 6
        on right: 2 5
    Routine <node> (58)
        on left: 7
        on right: 5
    TestList <node> (59)
        on left: 8 9
        on right: 2 8
    Test <node> (60)
        on left: 10
        on right: 8
    StatementList <node> (61)
        on left: 11 12
        on right: 7 10 12 55 56 58 59
    ExpectCall <node> (62)
        on left: 13 14
        on right: 65
    PromptCall <node> (63)
        on left: 15
        on right: 70
    PrintCall <node> (64)
        on left: 16 17
        on right: 66
    Index <node> (65)
        on left: 18
        on right: 19 37
    CanManip <node> (66)
        on left: 19 20
        on right: 21
    Exp <node> (67)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 13 14 15 16 17 18 22 23 24 25 26 27 28 34 35 36 37 38 39 40 54 55 58 59 71 75 76
    VariableAssign <node> (68)
        on left: 36 37 38
        on right: 4 60
    SendMsgCall <node> (69)
        on left: 39 40
        on right: 67
    ReadMsgCall <node> (70)
        on left: 41 42
        on right: 68
    ReadPinCall <node> (71)
        on left: 43 44 45 46
        on right: 64
    SetAnalogTail <node> (72)
        on left: 47 48 49 50
        on right: 51
    SetPinCall <node> (73)
        on left: 51 52 53
        on right: 63
    DelayCall <node> (74)
        on left: 54
        on right: 69
    LoopCall <node> (75)
        on left: 55 56
        on right: 62
    Statement <node> (76)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 12


State 0

    0 $accept: • goal $end

    $default  reduce using rule 3 (VarList)

    goal        go to state 1
    testScript  go to state 2
    VarList     go to state 3


State 1

    0 $accept: goal • $end

    $end  shift, and go to state 4


State 2

    1 goal: testScript •

    $default  reduce using rule 1 (goal)


State 3

    2 testScript: VarList • RoutineList TestList
    4 VarList: VarList • VariableAssign

    identifier  shift, and go to state 5

    $default  reduce using rule 6 (RoutineList)

    RoutineList     go to state 6
    VariableAssign  go to state 7


State 4

    0 $accept: goal $end •

    $default  accept


State 5

   36 VariableAssign: identifier • '=' Exp ';'
   37               | identifier • Index '=' Exp ';'
   38               | identifier • '.' length '=' Exp ';'

    '['  shift, and go to state 8
    '='  shift, and go to state 9
    '.'  shift, and go to state 10

    Index  go to state 11


State 6

    2 testScript: VarList RoutineList • TestList
    5 RoutineList: RoutineList • Routine

    routine  shift, and go to state 12

    $default  reduce using rule 9 (TestList)

    Routine   go to state 13
    TestList  go to state 14


State 7

    4 VarList: VarList VariableAssign •

    $default  reduce using rule 4 (VarList)


State 8

   18 Index: '[' • Exp ']'

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 23


State 9

   36 VariableAssign: identifier '=' • Exp ';'

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 24


State 10

   38 VariableAssign: identifier '.' • length '=' Exp ';'

    length  shift, and go to state 25


State 11

   37 VariableAssign: identifier Index • '=' Exp ';'

    '='  shift, and go to state 26


State 12

    7 Routine: routine • stringLiteral '{' StatementList '}'

    stringLiteral  shift, and go to state 27


State 13

    5 RoutineList: RoutineList Routine •

    $default  reduce using rule 5 (RoutineList)


State 14

    2 testScript: VarList RoutineList TestList •
    8 TestList: TestList • Test

    test  shift, and go to state 28

    $default  reduce using rule 2 (testScript)

    Test  go to state 29


State 15

   35 Exp: '(' • Exp ')'

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 30


State 16

   30 Exp: stringLiteral •

    $default  reduce using rule 30 (Exp)


State 17

   19 CanManip: identifier • Index
   20         | identifier • '.' length
   29 Exp: identifier •

    '['  shift, and go to state 8
    '.'  shift, and go to state 31

    $default  reduce using rule 29 (Exp)

    Index  go to state 32


State 18

   33 Exp: can_msg •

    $default  reduce using rule 33 (Exp)


State 19

   34 Exp: add • Exp

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 33


State 20

   31 Exp: integerLiteral •

    $default  reduce using rule 31 (Exp)


State 21

   32 Exp: hexLiteral •

    $default  reduce using rule 32 (Exp)


State 22

   21 Exp: CanManip •

    $default  reduce using rule 21 (Exp)


State 23

   18 Index: '[' Exp • ']'
   22 Exp: Exp • add Exp
   23    | Exp • mult Exp
   24    | Exp • NE Exp
   25    | Exp • EQ Exp
   26    | Exp • comparison Exp
   27    | Exp • andToken Exp
   28    | Exp • orToken Exp

    add         shift, and go to state 34
    mult        shift, and go to state 35
    comparison  shift, and go to state 36
    andToken    shift, and go to state 37
    orToken     shift, and go to state 38
    NE          shift, and go to state 39
    EQ          shift, and go to state 40
    ']'         shift, and go to state 41


State 24

   22 Exp: Exp • add Exp
   23    | Exp • mult Exp
   24    | Exp • NE Exp
   25    | Exp • EQ Exp
   26    | Exp • comparison Exp
   27    | Exp • andToken Exp
   28    | Exp • orToken Exp
   36 VariableAssign: identifier '=' Exp • ';'

    ';'         shift, and go to state 42
    add         shift, and go to state 34
    mult        shift, and go to state 35
    comparison  shift, and go to state 36
    andToken    shift, and go to state 37
    orToken     shift, and go to state 38
    NE          shift, and go to state 39
    EQ          shift, and go to state 40


State 25

   38 VariableAssign: identifier '.' length • '=' Exp ';'

    '='  shift, and go to state 43


State 26

   37 VariableAssign: identifier Index '=' • Exp ';'

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 44


State 27

    7 Routine: routine stringLiteral • '{' StatementList '}'

    '{'  shift, and go to state 45


State 28

   10 Test: test • stringLiteral '{' StatementList '}'

    stringLiteral  shift, and go to state 46


State 29

    8 TestList: TestList Test •

    $default  reduce using rule 8 (TestList)


State 30

   22 Exp: Exp • add Exp
   23    | Exp • mult Exp
   24    | Exp • NE Exp
   25    | Exp • EQ Exp
   26    | Exp • comparison Exp
   27    | Exp • andToken Exp
   28    | Exp • orToken Exp
   35    | '(' Exp • ')'

    ')'         shift, and go to state 47
    add         shift, and go to state 34
    mult        shift, and go to state 35
    comparison  shift, and go to state 36
    andToken    shift, and go to state 37
    orToken     shift, and go to state 38
    NE          shift, and go to state 39
    EQ          shift, and go to state 40


State 31

   20 CanManip: identifier '.' • length

    length  shift, and go to state 48


State 32

   19 CanManip: identifier Index •

    $default  reduce using rule 19 (CanManip)


State 33

   22 Exp: Exp • add Exp
   23    | Exp • mult Exp
   24    | Exp • NE Exp
   25    | Exp • EQ Exp
   26    | Exp • comparison Exp
   27    | Exp • andToken Exp
   28    | Exp • orToken Exp
   34    | add Exp •

    mult  shift, and go to state 35

    $default  reduce using rule 34 (Exp)


State 34

   22 Exp: Exp add • Exp

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 49


State 35

   23 Exp: Exp mult • Exp

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 50


State 36

   26 Exp: Exp comparison • Exp

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 51


State 37

   27 Exp: Exp andToken • Exp

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 52


State 38

   28 Exp: Exp orToken • Exp

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 53


State 39

   24 Exp: Exp NE • Exp

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 54


State 40

   25 Exp: Exp EQ • Exp

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 55


State 41

   18 Index: '[' Exp ']' •

    $default  reduce using rule 18 (Index)


State 42

   36 VariableAssign: identifier '=' Exp ';' •

    $default  reduce using rule 36 (VariableAssign)


State 43

   38 VariableAssign: identifier '.' length '=' • Exp ';'

    '('             shift, and go to state 15
    stringLiteral   shift, and go to state 16
    identifier      shift, and go to state 17
    can_msg         shift, and go to state 18
    add             shift, and go to state 19
    integerLiteral  shift, and go to state 20
    hexLiteral      shift, and go to state 21

    CanManip  go to state 22
    Exp       go to state 56


State 44

   22 Exp: Exp • add Exp
   23    | Exp • mult Exp
   24    | Exp • NE Exp
   25    | Exp • EQ Exp
   26    | Exp • comparison Exp
   27    | Exp • andToken Exp
   28    | Exp • orToken Exp
   37 VariableAssign: identifier Index '=' Exp • ';'

    ';'         shift, and go to state 57
    add         shift, and go to state 34
    mult        shift, and go to state 35
    comparison  shift, and go to state 36
    andToken    shift, and go to state 37
    orToken     shift, and go to state 38
    NE          shift, and go to state 39
    EQ          shift, and go to state 40


State 45

    7 Routine: routine stringLiteral '{' • StatementList '}'

    $default  reduce using rule 11 (StatementList)

    StatementList  go to state 58


State 46

   10 Test: test stringLiteral • '{' StatementList '}'

    '{'  shift, and go to state 59


State 47

   35 Exp: '(' Exp ')' •

    $default  reduce using rule 35 (Exp)


State 48

   20 CanManip: identifier '.' length •

    $default  reduce using rule 20 (CanManip)


State 49

   22 Exp: Exp • add Exp
   22    | Exp add Exp •
   23    | Exp • mult Exp
   24    | Exp • NE Exp
   25    | Exp • EQ Exp
   26    | Exp • comparison Exp
   27    | Exp • andToken Exp
   28    | Exp • orToken Exp

    mult  shift, and go to state 35

    $default  reduce using rule 22 (Exp)


State 50

   22 Exp: Exp • add Exp
   23    | Exp • mult Exp
   23    | Exp mult Exp •
   24    | Exp • NE Exp
   25    | Exp • EQ Exp
   26    | Exp • comparison Exp
   27    | Exp • andToken Exp
   28    | Exp • orToken Exp

    $default  reduce using rule 23 (Exp)


State 51

   22 Exp: Exp • add Exp
   23    | Exp • mult Exp
   24    | Exp • NE Exp
   25    | Exp • EQ Exp
   26    | Exp • comparison Exp
   26    | Exp comparison Exp •
   27    | Exp • andToken Exp
   28    | Exp • orToken Exp
